Network.yaml
# Creating VPC for the newly onboarded account

---
AWSTemplateFormatVersion: '2010-09-09'
Description: Create VPC for Migration
Parameters:
  VPCCidrBlock:
    Type: String
    Description: CIDR block for VPC to deploy
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(/([0-9]|[1-2][0-9]|3[0-2]))$"
    Default: 10.0.0.0/16
  PublicSubnetCIDR1:
    Type: String
    Description: First public subnet CIDR
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(/([0-9]|[1-2][0-9]|3[0-2]))$"
    Default: 10.0.1.0/24
  PublicSubnetCIDR2:
    Type: String
    Description: Second public subnet CIDR 
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(/([0-9]|[1-2][0-9]|3[0-2]))$"
    Default: 10.0.2.0/24
  PrivateSubnetCIDR1:
    Type: String
    Description: First private subnet CIDR 
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(/([0-9]|[1-2][0-9]|3[0-2]))$"
    Default: 10.0.3.0/24
  PrivateSubnetCIDR2:
    Type: String
    Description: Second private subnet CIDR
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(/([0-9]|[1-2][0-9]|3[0-2]))$"
    Default: 10.0.4.0/24

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Network Configuration
      Parameters:
      - VPCCidrBlock
      - PublicSubnetCIDR1
      - PublicSubnetCIDR2
      - PrivateSubnetCIDR1
      - PrivateSubnetCIDR2
    ParameterLabels:
      VPCID:
        default: Which VPC should this be deployed to?
Resources:
  CoreVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VPCCidrBlock
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Service Tier
        Value: Nonproduction
      - Key: Process
        Value: Onboarding
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: Internet Gateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: InternetGateway
      VpcId:
        Ref: CoreVPC
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Ref: PrivateSubnetCIDR1
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs: ''
      MapPublicIpOnLaunch: 'false'
      Tags:
      - Key: Name
        Value: Private Subnet 1
      VpcId:
        Ref: CoreVPC
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Ref: PrivateSubnetCIDR2
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs: ''
      MapPublicIpOnLaunch: 'false'
      Tags:
      - Key: Name
        Value: Private Subnet 2
      VpcId:
        Ref: CoreVPC
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Ref: PublicSubnetCIDR1
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs: ''
      MapPublicIpOnLaunch: 'false'
      Tags:
      - Key: Name
        Value: Public Subnet 1
      VpcId:
        Ref: CoreVPC
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Ref: PublicSubnetCIDR2
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs: ''
      MapPublicIpOnLaunch: 'false'
      Tags:
      - Key: Name
        Value: Public Subnet 2
      VpcId:
        Ref: CoreVPC
  NatGatewayEIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - NatGatewayEIP1
        - AllocationId
      SubnetId:
        Ref: PublicSubnet1
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: CoreVPC
      Tags:
      - Key: Name
        Value: Public Route Table
  AttachPublicSubnet1RouteTable:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: PublicSubnet1
  AttachPublicSubnet2RouteTable:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: PublicSubnet2
  PublicRoutetoInternet:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
      RouteTableId:
        Ref: PublicRouteTable
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: CoreVPC
      Tags:
      - Key: Name
        Value: Private Route Table 1
  AttachPrivateSubnet1RouteTable1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable1
      SubnetId:
        Ref: PrivateSubnet1
  AttachPrivateSubnet2RouteTable1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable1
      SubnetId:
        Ref: PrivateSubnet2
  PrivateRoutetoNatGateway1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGateway1
      RouteTableId:
        Ref: PrivateRouteTable1
  SSHSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Enable Security for Server"
      VpcId:
        Ref: CoreVPC  
      SecurityGroupIngress:
        -
          CidrIp: 10.0.2.1/32
          FromPort: 22
          IpProtocol: TCP
          ToPort: 22
  ServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties: 
      GroupDescription: "Enable Security for Server"
      VpcId:
        Ref: CoreVPC
      SecurityGroupIngress: 
        - 
          CidrIp: 10.0.2.2/32
          FromPort: 80
          IpProtocol: TCP
          ToPort: 80


Outputs:
  VPCID:
    Description: VPC ID
    Value:
      Ref: CoreVPC
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-VPCID"
  VPCCidrBlock:
    Description: VPC Cidr Block
    Value:
      Ref: VPCCidrBlock
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-VPCCidrBlock"
  PublicSubnet1:
    Description: Public Subnet 1
    Value:
      Ref: PublicSubnet1
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PublicSubnet1"
  PublicSubnet2:
    Description: Public Subnet 2
    Value:
      Ref: PublicSubnet2
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PublicSubnet2"
  PrivateSubnet1:
    Description: Private Subnet 1
    Value:
      Ref: PrivateSubnet1
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PrivateSubnet1"
  SSHSecurityGroup:
    Description: SSH Security Group 
    Value:
      Ref: SSHSecurityGroup
    Export:
      Name: SSHSecurityGroup
        #Fn::Sub: "${AWS::StackName}-SSHSecurityGroup"
  ServerSecurityGroup:
    Description: Server Security Group
    Value:
      Ref: ServerSecurityGroup
    Export:
      Name: ServerSecurityGroup
        #Fn::Sub: "${AWS::StackName}-ServerSecurityGroup"
